Added 4 examples, 4th one not working

--- a/app/index.html
+++ b/app/index.html
@@ -44,23 +44,26 @@
 
         <div class="container">
             <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                <div class="box-by-dan try1">
+                    <span>Try 1 - Click Me. </span>
                 </div>
             </div>
             <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                <div class="box-by-dan try2">
+                    <span>Try 2 - Hover Me</span>
                 </div>
             </div>
             <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                <div class="box-by-dan try3">
+                    <span>Try 3 - Click Me</span>
                 </div>
             </div>
             <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                <div class="box-by-dan try4">
+                  <span class = "input-query">You wanna rumble?</span>
+                  <input>
+                  <span class = "rumbler">You can't handle it.</span>
+                  <span class="submit">SUBMIT</span>
                 </div>
             </div>
             <div class="wrapper">
