--- a/app/index.html
+++ b/app/index.html
@@ -44,33 +44,43 @@
 
         <div class="container">
             <div class="wrapper">
-                <div class="box-by-dan try1">
-                    <span>Try 1 - Click Me. </span>
-                </div>
+              <!-- Try 1 -->
+              <div class="box-by-dan try1">
+                <span>Try 1 - Click Me. </span>
+              </div>
             </div>
+            <!-- Try 2 -->
             <div class="wrapper">
-                <div class="box-by-dan try2">
-                    <span>Try 2 - Hover Me</span>
-                </div>
+              <div class="box-by-dan try2">
+                <span>Try 2 - Hover Me</span>
+              </div>
             </div>
+            <!-- Try 3 -->
             <div class="wrapper">
-                <div class="box-by-dan try3">
-                    <span>Try 3 - Click Me</span>
-                </div>
+              <div class="box-by-dan try3">
+                <span>Try 3 - Click Me</span>
+              </div>
             </div>
+            <!-- Try 4 -->
             <div class="wrapper">
-                <div class="box-by-dan try4">
-                  <span class = "input-query">You wanna rumble?</span>
-                  <input>
-                  <span class = "rumbler">You can't handle it.</span>
-                  <span class="submit">SUBMIT</span>
-                </div>
+              <div class="box-by-dan try4">
+                <span class = "input-query">You wanna rumble?</span>
+                <input>
+                <span class = "rumbler">Don't even think about it.</span>
+                <span class="submit">SUBMIT</span>
+              </div>
             </div>
+            <!-- Try 5 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Watch This Magic</span>
-                </div>
+              <div class="box-by-dan">
+                <span>Shade Up</span>
+              </div>
+              <div class="shade">
+                <h2>Shade Down</h2>
+                <span>-click here-</span>
+              </div>
             </div>
+            <!-- Try 6 -->
             <div class="wrapper">
                 <div class="box-by-dan">
                     <span>Watch This Magic</span>
