finished try 6 - Inch Worm

--- a/app/index.html
+++ b/app/index.html
@@ -43,8 +43,9 @@
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 
         <div class="container">
+          <div class="row1">
+            <!-- Try 1 -->
             <div class="wrapper">
-              <!-- Try 1 -->
               <div class="box-by-dan try1">
                 <span>Try 1 - Click Me. </span>
               </div>
@@ -61,7 +62,9 @@
                 <span>Try 3 - Click Me</span>
               </div>
             </div>
+          </div>
             <!-- Try 4 -->
+          <div class="row2">
             <div class="wrapper">
               <div class="box-by-dan try4">
                 <span class = "input-query">You wanna rumble?</span>
@@ -72,20 +75,28 @@
             </div>
             <!-- Try 5 -->
             <div class="wrapper">
-              <div class="box-by-dan">
-                <span>Shade Up</span>
+              <div class="box-by-dan button-room try5">
+                <span>Oh yeah!</span>
               </div>
               <div class="shade">
-                <h2>Shade Down</h2>
-                <span>-click here-</span>
+                <h2>Toggle</h2>
               </div>
             </div>
+            <img class="toggle-button center-btn" src = "images/toggle.png">
             <!-- Try 6 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Watch This Magic</span>
-                </div>
+              <div class="box-by-dan button-room try6">
+                <span>animate + toggle</span>
+              </div>
+              <div class="shade">
+                <h2>Inch Worm</h2>
+              </div>
             </div>
+            <div class="right">
+            <img class="toggle-button" src = "images/toggle.png">
+            </div>
+          </div>
+          <!-- Try 7 -->
             <div class="wrapper">
                 <div class="box-by-dan">
                     <span>Watch This Magic</span>
