--- a/app/index.html
+++ b/app/index.html
@@ -47,19 +47,19 @@
             <!-- Try 1 -->
             <div class="wrapper">
               <div class="box-by-dan try1">
-                <span>Try 1 - Click Me. </span>
+                <span>Click Me. (1)</span>
               </div>
             </div>
             <!-- Try 2 -->
             <div class="wrapper">
               <div class="box-by-dan try2">
-                <span>Try 2 - Hover Me</span>
+                <span>Hover Me. (2)</span>
               </div>
             </div>
             <!-- Try 3 -->
             <div class="wrapper">
               <div class="box-by-dan try3">
-                <span>Try 3 - Click Me</span>
+                <span>Click Me. (3)</span>
               </div>
             </div>
           </div>
@@ -67,7 +67,7 @@
           <div class="row2">
             <div class="wrapper">
               <div class="box-by-dan try4">
-                <span class = "input-query">You wanna rumble?</span>
+                <span class = "input-query">You wanna rumble? (4)</span>
                 <input>
                 <span class = "rumbler">Don't even think about it.</span>
                 <span class="submit">SUBMIT</span>
@@ -79,7 +79,7 @@
                 <span>Oh yeah!</span>
               </div>
               <div class="shade">
-                <h2>Toggle</h2>
+                <h2>Toggle (5)</h2>
               </div>
             </div>
             <img class="toggle-button center-btn" src = "images/toggle.png">
@@ -89,132 +89,148 @@
                 <span>animate + toggle</span>
               </div>
               <div class="shade">
-                <h2>Inch Worm</h2>
+                <h2>Inch Worm (6)</h2>
               </div>
             </div>
             <div class="right">
-            <img class="toggle-button" src = "images/toggle.png">
+              <img class="toggle-button" src = "images/toggle.png">
             </div>
           </div>
           <!-- Try 7 -->
+          <div class="row3">
+            <div class="wrapper">
+                <div class="box-by-dan try7">
+                  <span>Can you pull it back down?</span>
+                </div>
+                <div class="shade">
+                  <h2>Shade (7)</h2>
+                </div>
+              <div class="left">
+                <img class="toggle-button" src = "images/toggle.png">
+              </div>
+            </div>
+            <!-- Try 8 -->
+            <div class="wrapper">
+                <div class="box-by-dan try8">
+                    <span>Waiting for The Magic</span>
+                </div>
+                <div class="shade">
+                  <h2>Shade (8)</h2>
+                </div>
+              <div class="center">
+                <img class="toggle-button" src = "images/toggle.png">
+              </div>
+            </div>
+          <!-- Try 9 -->
+            <div class="wrapper">
+                <div class="box-by-dan try 9">
+                    <span>Waiting for The Magic</span>
+                </div>
+            </div>
+          </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                    <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                    <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                    <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan">
-                    <span>Watch This Magic</span>
-                </div>
-            </div>
-            <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Watch This Magic</span>
-                </div>
-            </div>
-            <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Watch This Magic</span>
-                </div>
-            </div>
-            <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Watch This Magic</span>
+                  <span>Waiting for The Magic</span>
                 </div>
             </div>
 
