--- a/app/index.html
+++ b/app/index.html
@@ -112,10 +112,10 @@
             <!-- Try 8 -->
             <div class="wrapper">
                 <div class="box-by-dan try8">
-                    <span>Waiting for The Magic</span>
+                    <span>Div Behind Div</span>
                 </div>
                 <div class="shade">
-                  <h2>Shade (8)</h2>
+                  <h2>Hover me. (8)</h2>
                 </div>
               <div class="center">
                 <img class="toggle-button" src = "images/toggle.png">
