--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,8 @@
             </div>
           </div>
             <!-- Try 4 -->
+            <!-- End Row1 -->
+            <!-- Begin Row2 -->
           <div class="row2">
             <div class="wrapper">
               <div class="box-by-dan try4">
@@ -96,6 +98,8 @@
               <img class="toggle-button" src = "images/toggle.png">
             </div>
           </div>
+          <!-- End Row2 -->
+          <!-- Begin Row3 -->
           <!-- Try 7 -->
           <div class="row3">
             <div class="wrapper">
@@ -112,7 +116,7 @@
             <!-- Try 8 -->
             <div class="wrapper">
                 <div class="box-by-dan try8">
-                    <span>Div Behind Div</span>
+                    <span>Div Behind a Div</span>
                 </div>
                 <div class="shade">
                   <h2>Hover me. (8)</h2>
@@ -123,116 +127,171 @@
             </div>
           <!-- Try 9 -->
             <div class="wrapper">
-                <div class="box-by-dan try 9">
-                    <span>Waiting for The Magic</span>
+                <div class="box-by-dan try9">
+                    <span>Click Me (9)</span>
                 </div>
             </div>
           </div>
-            <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Waiting for The Magic</span>
-                </div>
+          <!-- End Row 3 -->
+          <!-- Begin Row 4 -->
+          <!-- Try 10 -->
+          <div class="row4">
+            <div class="main-switch1">
+              <img class="toggle-button left" src = "images/toggle.png">
             </div>
             <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Waiting for The Magic</span>
+                <div class="box-by-dan try10">
+                    <span>Toggle for display (10)</span>
                 </div>
             </div>
+            <!-- Try 11 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                    <span>Waiting for The Magic</span>
-                </div>
+              <div class="box-by-dan try11">
+                <span>Change the border color (11)</span>
+              </div>
             </div>
+            <!-- Try 12 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
+              <div class="box-by-dan try12">
+                <span>Change the h6. (12)</span>
+                <h6>Here's an h6</h6>
+              </div>
             </div>
+          </div>
+          <!-- End try 12 -->
+
+          <!-- End Row 4 -->
+          <!-- Begin Row 5-->
+          <!-- Try 13 -->
+          <div class="row5">
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
+              <div class="box-by-dan try13">
+                <span>Wait...</span>
+              </div>
             </div>
+            <!-- Try 14 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
+                <div class="box-by-dan try14">
+                  <span class = "fade-this">White Shadow Pulsate(14)</span>
                 </div>
             </div>
+            <!-- Try 15 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
+              <div class="box-by-dan try15">
+                <span>Double Click Me. (15)</span>
+              </div>
             </div>
+          </div>
+          <!-- Begin Row 5 -->
+          <!-- Begin Row 6 -->
+          <!-- Try 16 -->
+          <div class="row6">
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
+              <div class="box-by-dan try16">
+                <span>Lights Out (16)</span>
+              </div>
             </div>
+            <!-- Try 17 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
+                <div class="box-by-dan try17">
+                  <span>Summertime (17)</span>
                 </div>
             </div>
+            <!-- Try 18 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
+              <div class="box-by-dan">
+                <span>Waiting for The Magic</span>
+              </div>
             </div>
+          </div>
+          <!-- Begin Row 6 -->
+          <!-- Begin Row 7 -->
+          <!-- Try 19 -->
+          <div class="row">
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
+              <div class="box-by-dan">
+                <span>Waiting for The Magic</span>
+              </div>
             </div>
-            <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
-            </div>
-            <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
-            </div>
-            <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
-            </div>
-            <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
-            </div>
-            <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
-            </div>
-            <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
-                </div>
-            </div>
+            <!-- Try 20 -->
             <div class="wrapper">
                 <div class="box-by-dan">
                   <span>Waiting for The Magic</span>
                 </div>
             </div>
+            <!-- Try 21 -->
+            <div class="wrapper">
+              <div class="box-by-dan">
+                <span>Waiting for The Magic</span>
+              </div>
+            </div>
+          </div>
+          <!-- Begin Row 7 -->
+          <!-- Begin Row 8-->
+          <!-- Try 22 -->
+          <div class="row8">
+            <div class="wrapper">
+              <div class="box-by-dan">
+                <span>Waiting for The Magic</span>
+              </div>
+            </div>
+            <!-- Try 23 -->
             <div class="wrapper">
                 <div class="box-by-dan">
                   <span>Waiting for The Magic</span>
                 </div>
             </div>
+            <!-- Try 24 -->
+            <div class="wrapper">
+              <div class="box-by-dan">
+                <span>Waiting for The Magic</span>
+              </div>
+            </div>
+          </div>
+          <!-- End Row 8 -->
+          <!-- Begin Row 9 -->
+          <!-- Try 25 -->
+          <div class="row">
+            <div class="wrapper">
+              <div class="box-by-dan">
+                <span>Waiting for The Magic</span>
+              </div>
+            </div>
+            <!-- Try 26 -->
             <div class="wrapper">
                 <div class="box-by-dan">
                   <span>Waiting for The Magic</span>
                 </div>
             </div>
+            <!-- Try 27 -->
+            <div class="wrapper">
+              <div class="box-by-dan">
+                <span>Waiting for The Magic</span>
+              </div>
+            </div>
+          </div>
+          <!-- End Row9 -->
+          <!-- Begin Row10 -->
+          <!-- Try 28 -->
+          <div class="row10">
+            <div class="wrapper">
+              <div class="box-by-dan">
+                <span>Waiting for The Magic</span>
+              </div>
+            </div>
+            <!-- Try 29 -->
             <div class="wrapper">
                 <div class="box-by-dan">
                   <span>Waiting for The Magic</span>
                 </div>
             </div>
+            <!-- Try 30 -->
+            <div class="wrapper">
+              <div class="box-by-dan">
+                <span>Waiting for The Magic</span>
+              </div>
+            </div>
+          </div>
 
 
 
@@ -256,6 +315,7 @@
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/main.js"></script>
+        <script src="scripts/other.js"></script>
         <!-- endbuild -->
 </body>
 </html>
