Added try 18 - Bad Moon

--- a/app/index.html
+++ b/app/index.html
@@ -188,19 +188,19 @@
           <div class="row6">
             <div class="wrapper">
               <div class="box-by-dan try16">
-                <span>Lights Out (16)</span>
+                <span>Lights Out <em>dbl click</em>(16)</span>
               </div>
             </div>
             <!-- Try 17 -->
             <div class="wrapper">
                 <div class="box-by-dan try17">
-                  <span>Summertime (17)</span>
+                  <span>Summertime  <em>(click)</em> (17)</span>
                 </div>
             </div>
             <!-- Try 18 -->
             <div class="wrapper">
-              <div class="box-by-dan">
-                <span>Waiting for The Magic</span>
+              <div class="box-by-dan try18">
+                <span>Bad Moon <em>(hover)</em> (18)</span>
               </div>
             </div>
           </div>
