--- a/app/index.html
+++ b/app/index.html
@@ -137,7 +137,7 @@
           <!-- Try 10 -->
           <div class="row4">
             <div class="main-switch1">
-              <img class="toggle-button left" src = "images/toggle.png">
+              <img class="toggle-button left" src = "images/toggle.png"><h5>Click Me</h5>
             </div>
             <div class="wrapper">
                 <div class="box-by-dan try10">
@@ -209,20 +209,22 @@
           <!-- Try 19 -->
           <div class="row">
             <div class="wrapper">
-              <div class="box-by-dan">
-                <span>Waiting for The Magic</span>
+              <div class="box-by-dan try19">
+                <span>All but me <em>(hover)</em> (19)</span>
+                <h6>using .not(this)</h6>
               </div>
             </div>
             <!-- Try 20 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
+                <div class="box-by-dan try20">
+                  <span>Words Fire <em>(click)</em> (20)</span>
+                  <h6>using .each</h6>
                 </div>
             </div>
             <!-- Try 21 -->
             <div class="wrapper">
-              <div class="box-by-dan">
-                <span>Waiting for The Magic</span>
+              <div class="box-by-dan try21">
+                <span>Summer Stop (21)</span><h6 class = 'count'>using each + return false</h6>
               </div>
             </div>
           </div>
