--- a/app/index.html
+++ b/app/index.html
@@ -233,20 +233,20 @@
           <!-- Try 22 -->
           <div class="row8">
             <div class="wrapper">
-              <div class="box-by-dan">
-                <span>Waiting for The Magic</span>
+              <div class="box-by-dan try22">
+                <span>Highlight <em>(hover)</em> (22)</span><h6>.mouseover/mouseout</h6>
               </div>
             </div>
             <!-- Try 23 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
+                <div class="box-by-dan try23">
+                  <span>Fire Words v2<em> (hover) </em>(23)</span><h6>mouseover + removeClass</h6>
                 </div>
             </div>
             <!-- Try 24 -->
             <div class="wrapper">
-              <div class="box-by-dan">
-                <span>Waiting for The Magic</span>
+              <div class="box-by-dan try24">
+                <span>BlueSteel Not Me <em>(hover)</em> (24)</span><h6>.mouseover + not(this)</h6>
               </div>
             </div>
           </div>
