--- a/app/index.html
+++ b/app/index.html
@@ -255,14 +255,20 @@
           <!-- Try 25 -->
           <div class="row">
             <div class="wrapper">
-              <div class="box-by-dan">
-                <span>Waiting for The Magic</span>
+              <div class="box-by-dan try25">
+                <p>Eat</p>
+                <p>Sleep</p>
+                <p>Code</p>
+                <h6>(25)</h6>
               </div>
             </div>
             <!-- Try 26 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
+              <div class="box-by-dan try26">
+                <span>Waiting for The Magic(26)</span>
+              </div>
+              <div class="shade">
+                  <h2>Shade (26)</h2>
                 </div>
             </div>
             <!-- Try 27 -->
