--- a/app/index.html
+++ b/app/index.html
@@ -246,14 +246,14 @@
             <!-- Try 24 -->
             <div class="wrapper">
               <div class="box-by-dan try24">
-                <span>BlueSteel Not Me <em>(hover)</em> (24)</span><h6>.mouseover + not(this)</h6>
+                <span>BlueSteel <em>(hover)</em> (24)</span><h6>.mouseover + not(this)</h6>
               </div>
             </div>
           </div>
           <!-- End Row 8 -->
           <!-- Begin Row 9 -->
           <!-- Try 25 -->
-          <div class="row">
+          <div class="row9">
             <div class="wrapper">
               <div class="box-by-dan try25">
                 <p>Eat</p>
@@ -265,16 +265,19 @@
             <!-- Try 26 -->
             <div class="wrapper">
               <div class="box-by-dan try26">
-                <span>Waiting for The Magic(26)</span>
+                <span>with a Hover(26)</span><h6>using .slideUp</h6>
               </div>
               <div class="shade">
-                  <h2>Shade (26)</h2>
+                  <h2>Pull Shade (26)</h2>
                 </div>
             </div>
             <!-- Try 27 -->
             <div class="wrapper">
-              <div class="box-by-dan">
-                <span>Waiting for The Magic</span>
+              <div class="box-by-dan try27">
+                <span>I hate that row above (27)</span><h6>.slideUp</h6>
+              </div>
+              <div class="left">
+                <img class="toggle-button" src = "images/toggle.png">
               </div>
             </div>
           </div>
@@ -283,20 +286,20 @@
           <!-- Try 28 -->
           <div class="row10">
             <div class="wrapper">
-              <div class="box-by-dan">
-                <span>Waiting for The Magic</span>
+              <div class="box-by-dan try28">
+                <span>Hover Glick (28)</span>
               </div>
             </div>
             <!-- Try 29 -->
             <div class="wrapper">
-                <div class="box-by-dan">
-                  <span>Waiting for The Magic</span>
+                <div class="box-by-dan try29">
+                  <span>Hover We Have a Prob (29)</span>
                 </div>
             </div>
             <!-- Try 30 -->
             <div class="wrapper">
-              <div class="box-by-dan">
-                <span>Waiting for The Magic</span>
+              <div class="box-by-dan try30">
+                <span>Close Up Shop (30)</span>
               </div>
             </div>
           </div>
