Finished up readme file. Fixed typo in div.try28.

--- a/app/index.html
+++ b/app/index.html
@@ -287,7 +287,7 @@
           <div class="row10">
             <div class="wrapper">
               <div class="box-by-dan try28">
-                <span>Hover Glick (28)</span>
+                <span>Hover Glitch (28)</span>
               </div>
             </div>
             <!-- Try 29 -->
